# WintarotAI

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.mjs
scripts/: build.mjs
src/: App.tsx  index.html  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  generator.rs  main.rs  paths.rs
src-tauri/src/generator/: api.rs  streams.rs  text.rs  types.rs
src/components/: MarkdownPreview.tsx  NovelgenApp.tsx  Sidebar.tsx  TarotReadingSection.tsx  ToastContainer.tsx  componentTypes.ts
src/hooks/: useGlobalFileDropGuards.ts  useNovelgenRuntime.ts
src/modules/: preview.ts  tauri_api.ts  text_utils.ts  toast.ts  ui_preferences.ts
src/services/: appSettingsUiService.ts  credentialService.ts  fileDropService.ts  modelService.ts  novelgenRuntimeController.ts  plotGenerationService.ts  runtimeBootstrapService.ts  runtimeEditorStateService.ts  runtimeInitializationService.ts  runtimeSelectorsService.ts  runtimeService.ts  runtimeSessionStateService.ts  runtimeViewStateStore.ts  runtimeWorkflowActionsService.ts  savedContentService.ts  settingsService.ts  sidebarResizerService.ts  tarotData.ts
src/types/: app.ts  globals.d.ts
